# BeginnerTrackExercises

./: BeginnerTrackExercises.cabal  CHANGELOG.md  LICENSE  README.md  package.yaml  stack.yaml
Ch02/: Ch02.cabal  Exercises.hs  Tests.hs
Ch03/: Ch03.cabal  Exercises.hs
Ch04/: Ch04.cabal  Exercises.hs  Tests.hs
Ch05/: Ch05.cabal  Exercises.hs  Tests.hs
Ch06/: Ch06.cabal  Exercises.hs  Tests.hs
Ch07/: Ch07.cabal  Exercises.hs  Tests.hs
Ch08/: Ch08.cabal  Exercises.hs  Tests.hs
Ch09/: Ch09.cabal  Exercises.hs  Run.hs  Tests.hs
Ch10/: Ch10.cabal  Exercises.hs  Tests.hs
src/: Ch02.hs  Ch08.hs  Ch09.hs
