name:       Ch09
version:    0.0.1
cabal-version: >= 1.10
build-type: Simple

library
    exposed-modules:
        Exercises
    build-depends: base, random
    default-language: Haskell2010

executable run
    main-is: Run.hs
    build-depends: base, random, Ch09

test-suite tests
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    build-depends: base, random, hspec, QuickCheck, Ch09
    default-language: Haskell2010
